globus-common (15.16-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:31 -0400

globus-common (15.15-2+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:58 -0400

globus-common (15.15-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:43 -0500

globus-common (15.14-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 13:25:37 -0500

globus-common (15.13-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 13:25:19 -0500

globus-common (15.13-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 20:03:16 -0500

globus-common (15.12-1+gt6.@distro@) @distro@; urgency=low

  * Don't depend on finding initializer/args parser

 -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 15:34:37 -0500

globus-common (15.11-1+gt6.@distro@) @distro@; urgency=low

  * Test Fixes

 -- Globus Toolkit <support@globus.org>  Fri, 14 Feb 2014 12:12:47 -0500

globus-common (15.10-1+gt6.@distro@) @distro@; urgency=low

  * Use Libs.private for common deps

 -- Globus Toolkit <support@globus.org>  Fri, 07 Feb 2014 22:35:00 -0500

globus-common (15.9-1+gt6.@distro@) @distro@; urgency=low

  * Fix some configure problems

 -- Globus Toolkit <support@globus.org>  Fri, 07 Feb 2014 12:54:01 -0500

globus-common (15.8-1+gt6.@distro@) @distro@; urgency=low

  * fix inconsistent arch-specific initializer

 -- Globus Toolkit <support@globus.org>  Fri, 07 Feb 2014 09:08:34 -0500

globus-common (15.7-1+gt6.@distro@) @distro@; urgency=low

  * Fix some configure problems

 -- Globus Toolkit <support@globus.org>  Thu, 06 Feb 2014 15:30:11 -0500
