@@ -1,3 +1,9 @@
+globus-xio (4.8-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Sat, 19 Apr 2014 16:24:10 -0400
+
 globus-xio (4.7-1+gt6.@distro@) @distro@; urgency=low
 
   * Test fixes
