@@ -1,3 +1,9 @@
+globus-common (15.17-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Sat, 19 Apr 2014 16:23:08 -0400
+
 globus-common (15.16-1+gt6.@distro@) @distro@; urgency=low
 
   * Version bump for consistency
